# Know-Task-OS

./: .agentignore  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  package-lock.json  package.json
apps/dispatcher-api/: agent_runner.py  janitor_daemon.py  main.py  package.json  requirements.txt  telemetry.py
apps/dispatcher-web/: package.json
apps/dispatcher-web/src/: App.tsx  index.css
apps/dispatcher-web/src/components/: Board.css  Board.tsx  Card.css  Card.tsx  Column.css  CreateTaskModal.tsx  I18n.tsx
apps/knowledge-api/: Dockerfile  package.json  pyproject.toml
apps/knowledge-api/backend/: main.py
apps/knowledge-api/backend/core/: llm.py
apps/knowledge-api/backend/scripts/: ingest.py  notion_connector.py
apps/knowledge-api/backend/services/: agent.py  rag.py
apps/knowledge-api/tests/: test_api.py
apps/knowledge-web/: Dockerfile  package.json
apps/knowledge-web/src/app/: page.tsx
apps/knowledge-web/src/components/: Chat.tsx
apps/security-github-app/: package.json
apps/security-ui/: package.json
apps/ticket-router-api/: README.md  ROADMAP.md
apps/ticket-router-api/docs/: PROJECT_REPORT.md
apps/ticket-router-api/src/: app.py
deploy/knowledge-helm/knowledge-agent/: Chart.yaml  values.yaml
deploy/knowledge-helm/knowledge-agent/templates/: _helpers.tpl  deployment.yaml
