[tool.poetry]
name = "knowledge-mesh"
version = "0.1.0"
description = "Enterprise Agentic Knowledge Mesh"
authors = ["Antigravity <ai@local>"]
readme = "ROADMAP.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
qdrant-client = "~1.9.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
langgraph = "^0.2.0"
pygithub = "^2.9.1"
httpx = "^0.28.1"
mlx-lm = "^0.31.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']
